# ctf-skills

./: .env.example  .gitignore  .pre-commit-config.yaml  .tmp_known_hosts  CONTRIBUTING.md  Makefile  PWN-500题-生成方案.md  README.md  alembic.ini  bug_analysis_report.md  config.example.json  generation-profiles.json  metadata_example.json  option-a-execution-container-design.md  pyproject.toml  repair_flow_redesign_plan.md  tmp-ssh-askpass.cmd  web-0001-sqli-bypass.json  worker-pool-split-plan.md
.claude/: launch.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_research_tables.py  0003_design_tasks.py  0004_design_attempts_and_designs.py  0005_progress_events.py  0006_build_attempts.py  0007_resource_deletion_counter.py  0008_generation_request_idempotency_key.py  0009_research_sources_content_hash_unique.py  0010_build_attempts_idempotency_key.py  0011_designs_grandfather.py  0012_executions_lease_and_fencing.py  0013_research_finding_technique_family.py  0014_design_task_diversity_flags.py  0015_design_task_plan_review.py  0016_design_difficulty_reviews.py  0017_research_run_trial_only.py  0018_design_profile_reservations.py  0019_design_evidence.py  0020_build_attempt_governance_contract.py  0021_artifact_observations.py  0022_corpus_governance.py
challenge-factory/: .gitignore  README.md  matrix.example.jsonl  pyproject.toml
challenge-factory/docs/: architecture.md
challenge-factory/openspec/: project.md
challenge-factory/prompts/: shard_prompt.md
challenge-factory/scripts/: prepare_hermes_home.py
challenge-factory/src/: cli.py  dashboard.py  paths.py  seeds.py  shards.py  webserver.py
challenge-factory/tests/: test_dashboard.py  test_hermes.py  test_packing.py  test_shards.py  test_webserver.py
delivery-format/: 交付格式规范.md
delivery-spec/: 交付格式规范.md
docs/: architecture.md  build-execution-workspaces.md  persistence.md  research-failure-categories.md  research-logic-assessment-2026-06-20.md  run-creation-and-worker-pool-proposal.md  页面问题评估与整改方案.md
docs/governance/: evidence-backed-diversity.md
docs/operator/: sequential-queue-fail-fast.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
openspec/: project.md
prompts/: design_planner_prompt.md  research_prompt.md  shard_prompt.md  shared_generation_strategy.md
pwn_docker_example/: README.md  ctf.xinetd
scripts/: build_frontend.sh  bundle_size_check.py  prepare_hermes_home.py
skills/ctf-pwn/: SKILL.md  modern-heap-and-sandbox.md
skills/ctf-reverse/: SKILL.md  wasm-mobile-managed.md
skills/ctf-web/: SKILL.md  github-advisory-patterns.md  java-spring.md  node-and-prototype.md  python-frameworks.md
skills/design-challenges/: SKILL.md
src/: cli.py  dashboard.py  hermes.py  packing.py  paths.py  reports.py  shards.py  state.py  validation.py  webserver.py
src/core/: build_timeout.py  clock.py  docker.py  execution_config.py  jsonio.py  paths.py  queue.py  state.py
src/domain/: artifact_observations.py  build_attempt_auto_repair.py  build_attempts.py  build_failure_taxonomy.py  challenge_corpus.py  challenge_design_validators.py  challenge_designs.py  corpus_rollout.py  design_evidence.py  design_profile_reservations.py  design_task_validators.py  design_tasks.py  executions.py  generation_profile.py  llm_settings.py  (+16 more)
tests/: conftest.py  test_cross_references.py  test_skill_discoverability.py  test_skill_frontmatter.py
tmp/: archive_delivered_challenges.py  deliver_and_cleanup_challenges.py  organize_delivered_images.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
(+666 files in other folders)
