[project]
name = "challenge-factory"
version = "0.1.0"
description = "File-backed Hermes CTF challenge generation control plane"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.110",
  "openpyxl>=3.1",
  "psycopg[binary]>=3",
  "python-dotenv>=1.0",
  "reportlab>=4.4",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.27",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "pytest-postgresql>=6",
  "ruff>=0.11",
]

[project.scripts]
challenge-factory = "cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
web = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "postgres: requires a PostgreSQL database reachable via TEST_DATABASE_URL",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
  ".hermes",
  ".uv-cache",
  ".venv",
  "venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

# Pyright/Pylance 配置：项目用的是 uv 管理的 .venv，类型存根（含
# SQLAlchemy 2.0 自带的 Session.scalars/scalar/execute 重载）都装在
# 这里。显式指向 venv + 打开 useLibraryCodeForTypes，Pylance 才能
# 解析 SQLAlchemy 的内联类型，否则会把 Session 的方法识别为 Unknown。
[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", ".uv-cache", ".hermes", "venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
useLibraryCodeForTypes = true
typeCheckingMode = "basic"
